# lib/api/feedbacks.ts
@@ -1,11 +1,12 @@
 import { Request, Response } from "express";
 import { isBrandNameInUse } from "../database/brand";
 import { isCategoryNameInUse } from "../database/category";
+import { isProductNameInUse, isProductNameValid } from "../database/product";
 import { isSupermarketNameInUse } from "../database/supermarket";
 import { isTempUserEmailInUse, isTempUserUsernameInUse } from "../database/temp-user";
 import { isUserEmailInUse, isUserUsernameInUse } from "../database/user";
 import { getEmail, getName, getUsername } from "../validation/semantic-validation";
-import { getString } from "../validation/type-validation";
+import { getInt, getString } from "../validation/type-validation";
 import { Ok, handleException } from "../web/response";
 import { validateToken } from "./auth";
 
@@ -129,6 +130,34 @@ export async function getSupermarketNameFeedback(req: Request, res: Response): P
             const name = getName(req.query.name);
             const inUse = await isSupermarketNameInUse(user.id, name);
             feedback = inUse ? 'Name already used!' : 'Valid Name';
+        } catch(e: any) {
+            const name = getString(req.query.name);
+            if(name.length < 3)
+                feedback = 'Name too short!';
+            else
+                feedback = 'Name too long!';
+        }
+        new Ok({feedback: feedback}).send(res);
+    } catch(e: any) {
+        handleException(e, res);
+    }
+}
+
+export async function getProductNameFeedback(req: Request, res: Response): Promise<void> {
+    try {
+        const user = await validateToken(req);
+        let feedback: string;
+        try {
+            const name = getName(req.query.name);
+            const brandId = getInt(req.query.brandId);
+            const supermarketId = getInt(req.query.supermarketId);
+            const inUse = await isProductNameInUse(user.id, name);
+            if(inUse) {
+                const valid = await isProductNameValid(user.id, name, brandId, supermarketId);
+                feedback = valid ? 'Other products with the same name' : 'Other products with the same name, brand and supermarket!'
+            }
+            else
+                feedback = 'Valid Name';
         } catch(e: any) {
             const name = getString(req.query.name);
             if(name.length < 3)
